--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "prod": "node ./dist/server.js",
     "prismaMigrate": "npx prisma migrate dev",
     "prismaStudio": "npx prisma studio",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
