--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "prod": "node ./dist/server.js",
     "prismaMigrate": "npx prisma migrate dev",
     "prismaStudio": "npx prisma studio",
